<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/representative_photo"
            profileImage="@{representative.official.photoUrl}"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/the_official_s_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_profile" />

        <TextView
            android:id="@+id/rep_office_name"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@{representative.office.name}"
            app:layout_constraintStart_toEndOf="@+id/representative_photo"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="President of the United States" />

        <TextView
            android:id="@+id/rep_official_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@{representative.official.name}"
            app:layout_constraintStart_toEndOf="@+id/representative_photo"
            app:layout_constraintTop_toBottomOf="@+id/rep_office_name"
            tools:text="Joe Biden" />

        <TextView
            android:id="@+id/rep_official_party"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@{representative.official.party}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/representative_photo"
            app:layout_constraintTop_toBottomOf="@+id/rep_official_name"
            tools:text="Democratic Party" />

        <ImageView
            android:id="@+id/twitter_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/the_twitter_link"
            app:layout_constraintBottom_toBottomOf="@+id/facebook_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_twitter" />

        <ImageView
            android:id="@+id/facebook_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/the_facebook_link"
            app:layout_constraintBottom_toBottomOf="@+id/www_icon"
            app:layout_constraintEnd_toStartOf="@+id/twitter_icon"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/www_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/the_www_link"
            app:layout_constraintBottom_toBottomOf="@+id/rep_official_party"
            app:layout_constraintEnd_toStartOf="@+id/facebook_icon"
            app:srcCompat="@drawable/ic_www" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>